--- a/index.html
+++ b/index.html
@@ -16,7 +16,34 @@
 </head>
 
 <body>
-<img src="images/under_construction.png" atl="under construction" class="under-construction">
+
+<img src="images/yellow-sea.png" class="header">
+
+<img src="images/anime-quiz-badge.png" class="game">
+<a href="https://play.google.com/store/apps/details?id=space.rakushkaqames.animequiz" target="_blank">
+<img src="images/google-play-badge.png" class="google-badge">
+</a>
+<img src="images/line.png" class="header">
+
+
+<img src="images/cats-memory-match-badge.png" class="game">
+<a href="https://play.google.com/store/apps/details?id=com.RakushkaGames.CatsMemoryMatch" target="_blank">
+<img src="images/google-play-badge.png" class="google-badge">
+</a>
+<img src="images/line.png" class="header">
+
+<img src="images/falling-balls-badge.png" class="game">
+<a href="https://play.google.com/store/apps/details?id=com.RakushkaGames.FallingBalls" target="_blank">
+<img src="images/google-play-badge.png" class="google-badge">
+</a>
+<img src="images/line.png" class="header">
+
+<img src="images/movie-quiz-badge.png" class="game">
+<a href="https://play.google.com/store/apps/details?id=space.rakushkagames.bestmoviequiz" target="_blank">
+<img src="images/google-play-badge.png" class="google-badge">
+</a>
+<img src="images/line.png" class="header">
+
 </body>
 
 </html>
