--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>Rakushka Games</title>
 <meta content="width=device-width, initial-scale=1.0, user-scalable=1.0 name="viewport" />
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="css/style.css" />
 <link type="image/png" sizes="16x16" rel="icon" href="images/favicon_16x16.png" />
 <link type="image/png" sizes="32x32" rel="icon" href="images/favicon_32x32.png" />
