--- a/index.html
+++ b/index.html
@@ -31,33 +31,52 @@
 
 <body>
 
-<img src="images/yellow-sea.png" class="header">
-
+<div class="box">
+<a href="https://play.google.com/store/apps/details?id=space.rakushkaqames.animequiz" target="_blank">
 <img src="images/anime-quiz-badge.png" class="game">
+</a>
+
 <a href="https://play.google.com/store/apps/details?id=space.rakushkaqames.animequiz" target="_blank">
 <img src="images/google-play-badge.png" class="google-badge">
 </a>
-<img src="images/line.png" class="header">
+</div>
 
+<div class="box">
 
+<a href="https://play.google.com/store/apps/details?id=com.RakushkaGames.CatsMemoryMatch" target="_blank">
 <img src="images/cats-memory-match-badge.png" class="game">
+</a>
+
 <a href="https://play.google.com/store/apps/details?id=com.RakushkaGames.CatsMemoryMatch" target="_blank">
 <img src="images/google-play-badge.png" class="google-badge">
 </a>
-<img src="images/line.png" class="header">
 
+</div>
+
+<div class="box">
+
+<a href="https://play.google.com/store/apps/details?id=com.RakushkaGames.FallingBalls" target="_blank">
 <img src="images/falling-balls-badge.png" class="game">
+</a>
+
 <a href="https://play.google.com/store/apps/details?id=com.RakushkaGames.FallingBalls" target="_blank">
 <img src="images/google-play-badge.png" class="google-badge">
 </a>
-<img src="images/line.png" class="header">
 
+</div>
+
+<div class="box">
+
+<a href="https://play.google.com/store/apps/details?id=space.rakushkagames.bestmoviequiz" target="_blank">
 <img src="images/movie-quiz-badge.png" class="game">
+</a>
+
 <a href="https://play.google.com/store/apps/details?id=space.rakushkagames.bestmoviequiz" target="_blank">
 <img src="images/google-play-badge.png" class="google-badge">
 </a>
-<img src="images/line.png" class="header">
 
+</div>
+<//img src="images/line.png" class="header">
 </body>
 
 </html>
