new link (anime quiz huawei appgallery)

--- a/index.html
+++ b/index.html
@@ -32,13 +32,10 @@
 <body>
 
 <div class="box">
-<a href="https://play.google.com/store/apps/details?id=space.rakushkaqames.animequiz" target="_blank">
+<a href="https://appgallery.huawei.com/app/C103658163" target="_blank">
 <img src="images/anime-quiz-badge.png" class="game">
 </a>
 
-<a href="https://play.google.com/store/apps/details?id=space.rakushkaqames.animequiz" target="_blank">
-<img src="images/google-play-badge.png" class="google-badge">
-</a>
 </div>
 
 <div class="box">
